--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Caminar by TEMPLATED</title>
+		<title>Dish-washer by Matt Chen/title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">天然洗潔精 <span>by Ｍatt Chen</span></a></div>
+				<div class="logo"><a href="https://www.youtube.com/watch?v=bU0f1IvUcZA">Nature Dish washer <span>by Matt</span></a></div>
 			</header>
 
 		<!-- Main -->
