--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="https://www.youtube.com/watch?v=bU0f1IvUcZA">Nature Dish washer <span>by Matt</span></a></div>
+				<div class="logo"><a href="https://www.youtube.com/watch?v=bU0f1IvUcZA">Nature Dish washer <span>by Matt Chen</span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -76,7 +76,7 @@
 							<div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
 							<div class="inner">
 								<h3>Viverra Hendrerit</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<p>洗碗可以說是每個家庭的例行公事，為了去除殘留在碗盤上的油膩污垢，洗碗精可說是必備的清潔用品。然而一瓶好用的洗碗精，除了能夠強效去污之外，還能夠進一步抗菌、除味，讓雙手不受洗劑傷害而顯得乾燥。市面上常見的清潔品牌如 Pril 、花王 Kao 、毛寶等，外觀、質地雖然看似大同小異，但藉由清潔的過程仍能感受出些許不同。有的標榜溫和不刺激，有的則是以強效去油為訴求，選購時究竟該留意哪些注意事項，才能從中找到最適用的商品呢？欲知詳情歡迎參考以下的文章內容，其中還包含了十款好用的洗碗精推薦，有興趣的讀者們千萬不要錯過喔！</p>
 							</div>
 						</div>
 						<div class="spotlight alt">
