廚房用品文案

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>超天然養身洗碗精 </title>
+		<title>推薦十大洗碗精人氣排行榜【2020年最新版】 </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="https://www.youtube.com/watch?v=bU0f1IvUcZA">Nature Dish washer <span>by Matt Chen</span></a></div>
+				<div class="logo"><a href="https://my-best.tw/16865">Nature Dish washer <span>by Matt Chen</span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -29,12 +29,13 @@
 							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<header class="special">
-							<h2>Fringilla Fermentum Tellus</h2>
-							<p>vehicula urna sed justo bibendum</p>
+							<h2>洗碗精的選購要點</h2>
+							<p>文案by MyBest廚房用品</p>
 						</header>
 						<div class="content">
-							<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel. Vestibulum et efficitur urna. Duis velit nulla, interdum sed felis sit amet, facilisis auctor nunc. Cras luctus urna at risus feugiat scelerisque nec sed diam. </p>
-							<p>Nunc fringilla metus odio, at rutrum augue tristique vel. Nulla ac tellus a neque ullamcorper porta a vitae ipsum. Morbi est sapien, hendrerit quis mi in, aliquam bibendum orci. Vestibulum imperdiet nibh vitae maximus posuere. Aenean sit amet nibh feugiat, condimentum tellus eu, malesuada nunc. Mauris ac pulvinar turpis, sit amet pharetra est. Ut bibendum justo condimentum, vehicula ex vel, venenatis libero. Etiam vehicula urna sed justo bibendum, ac lacinia nunc pulvinar. Integer nec velit orci. Vestibulum pellentesque varius dapibus. Morbi ullamcorper augue est, sed luctus orci fermentum dictum. Nunc tincidunt, nisl consequat convallis viverra, metus nisl ultricies dui, vitae dapibus ligula urna sit amet nibh. Duis ut venenatis enim.</p>
+							<p>超市和大賣場架上的清潔用品區，很容易就找到琳瑯滿目的洗碗精。除了從品牌著手之外，還有哪些選購上的訣竅？讓我們趕緊跟著文章一起看下去吧！ </p>
+							<h2>以成分做選擇</h2>
+							<p>由於每一個廠牌的洗碗精成分不盡相同，訴諸的成效也會有所差異。以下，就為各位說明常見的幾種成分所持有的特色，如何選擇就端看個人的需求了。</p>
 						</div>
 					</section>
 
