--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="https://my-best.tw/16865">Nature Dish washer <span>by Matt Chen</span></a></div>
+				<div class="logo"><a href="https://my-best.tw/16865" target="_blank">推薦十大洗碗精人氣排行榜【2020年最新版】 <span>by Matt Chen</span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -29,10 +29,11 @@
 							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<header class="special">
-							<h2>洗碗精的選購要點</h2>
+							<h2>天然洗碗精最安全</h2>
 							<p>文案by MyBest廚房用品</p>
 						</header>
 						<div class="content">
+							<h2>洗碗精的選購要點</h2>
 							<p>超市和大賣場架上的清潔用品區，很容易就找到琳瑯滿目的洗碗精。除了從品牌著手之外，還有哪些選購上的訣竅？讓我們趕緊跟著文章一起看下去吧！ </p>
 							<h2>以成分做選擇</h2>
 							<p>由於每一個廠牌的洗碗精成分不盡相同，訴諸的成效也會有所差異。以下，就為各位說明常見的幾種成分所持有的特色，如何選擇就端看個人的需求了。</p>
