--- a/index.html
+++ b/index.html
@@ -43,29 +43,29 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style2">
 						<header>
-							<h2>Vestibulum Convallis</h2>
-							<p>vehicula urna sed justo bibendum</p>
+							<h2>方便跟家人的健康放在天平上,你選擇哪個？</h2>
+							<p>小孩子才做選擇...我全都要！</p>
 						</header>
 						<div class="content">
 							<div class="gallery">
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic03.jpg"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="images/pic03.jpg" target="_blank"><img src="images/pic03.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic01.jpg"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="images/pic01.jpg" target="_blank"><img src="images/pic01.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic04.jpg"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="images/pic04.jpg" target="_blank"><img src="images/pic04.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic05.jpg"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="images/pic05.jpg" target="_blank"><img src="images/pic05.jpg" alt="" /></a>
 									</div>
 								</div>
 							</div>
@@ -77,22 +77,25 @@
 						<div class="spotlight">
 							<div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
 							<div class="inner">
-								<h3>Viverra Hendrerit</h3>
+								<h3>你敢不洗碗嗎？</h3>
 								<p>洗碗可以說是每個家庭的例行公事，為了去除殘留在碗盤上的油膩污垢，洗碗精可說是必備的清潔用品。然而一瓶好用的洗碗精，除了能夠強效去污之外，還能夠進一步抗菌、除味，讓雙手不受洗劑傷害而顯得乾燥。市面上常見的清潔品牌如 Pril 、花王 Kao 、毛寶等，外觀、質地雖然看似大同小異，但藉由清潔的過程仍能感受出些許不同。有的標榜溫和不刺激，有的則是以強效去油為訴求，選購時究竟該留意哪些注意事項，才能從中找到最適用的商品呢？欲知詳情歡迎參考以下的文章內容，其中還包含了十款好用的洗碗精推薦，有興趣的讀者們千萬不要錯過喔！</p>
 							</div>
 						</div>
 						<div class="spotlight alt">
 							<div class="image flush"><img src="images/pic07.jpg" alt="" /></div>
 							<div  class="inner">
-								<h3>Curabitur Eget</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>配方為弱鹼性或界面活性劑含量高者，具有強效的洗淨力</h3>
+								<p>大多數人對於洗碗精的要求還是以洗淨力為優先考量，但這一點往往最難判別。一般來說，配方中界面活性劑含量越高，洗淨效果越好。此外，以酸鹼度來比較的話，弱鹼性的去污效果最佳、其次中性，最後則是弱酸性。</p>
+								<p>然而，這些只是既定的論述，並非完全具有代表性。舉例來說，有的商品會額外添加酵素等具有加強洗淨的成分，配方組合不同，所產生的清潔效果也會有所差異。因此，建議選購時可以針對商品的配方特色加以比較，或是參考網路上的使用評價，進一步篩選出最理想的商品。</p>
 							</div>
 						</div>
 						<div class="spotlight">
 							<div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
 							<div class="inner">
-								<h3>Morbi Eleifend</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>成分天然且無添加香料、著色劑等化學物質，能夠預防手部肌膚乾燥</h3>
+								<p>使用洗碗精清潔碗盤時，除了著重去油污效果，能否預防手部乾燥也是令人在意的環節。尤其對於肌膚敏感的人而言，溫和不刺激的配方更加切合使用需求。因此，在選擇上可考慮弱酸性且界面活性劑含量比例較少的商品。</p>
+								<p>此外，市面上有的洗碗精劑使用天然成分，無添加香料、著色劑等危害人體健康的化學物質，可減少對皮膚的刺激。不過，如果想要讓雙手更加滋潤，建議挑選配方中有額外添加保濕成分，成效會更加顯著，選購時務必多加留意包裝上的說明。</p>>
+								<p>如果您想進一步挑選對皮膚以及環境無害的洗碗清潔用品，還可以考慮購買洗碗皂來使用，以下提供如何選購洗碗皂的文章連結，讀者們不妨同時和洗碗精做個比較，從中挑選最適合的商品來做使用。</p>>
 							</div>
 						</div>
 					</section>
