--- a/index.html
+++ b/index.html
@@ -94,8 +94,32 @@
 							<div class="inner">
 								<h3>成分天然且無添加香料、著色劑等化學物質，能夠預防手部肌膚乾燥</h3>
 								<p>使用洗碗精清潔碗盤時，除了著重去油污效果，能否預防手部乾燥也是令人在意的環節。尤其對於肌膚敏感的人而言，溫和不刺激的配方更加切合使用需求。因此，在選擇上可考慮弱酸性且界面活性劑含量比例較少的商品。</p>
-								<p>此外，市面上有的洗碗精劑使用天然成分，無添加香料、著色劑等危害人體健康的化學物質，可減少對皮膚的刺激。不過，如果想要讓雙手更加滋潤，建議挑選配方中有額外添加保濕成分，成效會更加顯著，選購時務必多加留意包裝上的說明。</p>>
-								<p>如果您想進一步挑選對皮膚以及環境無害的洗碗清潔用品，還可以考慮購買洗碗皂來使用，以下提供如何選購洗碗皂的文章連結，讀者們不妨同時和洗碗精做個比較，從中挑選最適合的商品來做使用。</p>>
+								<p>此外，市面上有的洗碗精劑使用天然成分，無添加香料、著色劑等危害人體健康的化學物質，可減少對皮膚的刺激。不過，如果想要讓雙手更加滋潤，建議挑選配方中有額外添加保濕成分，成效會更加顯著，選購時務必多加留意包裝上的說明。</p>
+								<p>如果您想進一步挑選對皮膚以及環境無害的洗碗清潔用品，還可以考慮購買洗碗皂來使用，以下提供如何選購洗碗皂的文章連結，讀者們不妨同時和洗碗精做個比較，從中挑選最適合的商品來做使用。</p>
+							</div>
+						</div>
+						<div class="spotlight">
+							<div class="image flush"><img src="images/pic09.jpg" alt="" /></div>
+							<div class="inner">
+								<h3>便宜又大碗的國產洗碗精</h3>
+								<p>對於每天需要清洗比較多的鍋碗瓢盆，洗碗精消耗速度比較快的大家庭，推薦這款大容量包裝的商品。當中添加了潔淨強化配方，讓洗碗精本身不容易產生細菌，藉此降低洗碗過程中所使用的海綿或是抹布上的細菌滋生，避免洗好的餐具受到污染。
+								<p>由於配方中的化學添加物較多，如果擔心洗劑殘留，建議可增加清水的沖洗次數。不過如此一來，水費相對也會隨之增加。</p>
+							</div>
+						</div>
+						<div class="spotlight">
+							<div class="image flush"><img src="images/pic10.jpg" alt="" /></div>
+							<div class="inner">
+								<h3>獨家生薑檸檬去油配方，溫和不傷手</h3>
+								<p>本款來自於英國的知名清潔用品品牌，採倒立式瓶身設計，使用上一滴都不浪費。配方添加了高效濃縮技術萃取的生薑與檸檬精華，質地溫和、泡沫細膩，能迅速帶走油污，縮短清潔的時間。且洗後的餐具能保有光澤度，對於重視餐具潔淨感的媽媽們，一定會喜歡。
+								<p>生薑和檸檬的組合在市面上較罕見，有些消費者可能無法適應其味道，是選購前必需考量的一點。</p>
+							</div>
+						</div>
+						<div class="spotlight">
+							<div class="image flush"><img src="images/pic11.jpg" alt="" /></div>
+							<div class="inner">
+								<h3>除菌、消臭、一瓶OK！</h3>
+								<p>在日本堪稱清潔品牌霸主的花王，推出的這款商品採噴頭設計，以噴霧泡沫有效溶解油垢、茶垢，可深入難洗的碗盤死角。此外，對於碗盤上所殘留的食物氣味，也能有效去除，讓洗過的餐具達到真正的潔淨。商品除了有葡萄柚以及柑橘氣味之外，對於氣味較敏感的人還能選擇無味配方，想要嘗試不同的洗碗精類型的朋友們，不妨挑一款來體驗看看吧！</p>
+								<p>由於噴霧泡沫消耗較快，很快就需要更換一瓶。商品雖然有推出補充包，但購買的通路較少，不想要一直丟棄瓶身的話，建議另尋代購管道或是前往日本旅遊時到藥妝店或超市購買。</p>
 							</div>
 						</div>
 					</section>
