--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<p>如果您想進一步挑選對皮膚以及環境無害的洗碗清潔用品，還可以考慮購買洗碗皂來使用，以下提供如何選購洗碗皂的文章連結，讀者們不妨同時和洗碗精做個比較，從中挑選最適合的商品來做使用。</p>
 							</div>
 						</div>
-						<div class="spotlight">
+						<div class="spotlight alt">
 							<div class="image flush"><img src="images/pic09.jpg" alt="" /></div>
 							<div class="inner">
 								<h3>便宜又大碗的國產洗碗精</h3>
@@ -114,7 +114,7 @@
 								<p>生薑和檸檬的組合在市面上較罕見，有些消費者可能無法適應其味道，是選購前必需考量的一點。</p>
 							</div>
 						</div>
-						<div class="spotlight">
+						<div class="spotlight alt">
 							<div class="image flush"><img src="images/pic11.jpg" alt="" /></div>
 							<div class="inner">
 								<h3>除菌、消臭、一瓶OK！</h3>
